--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <script>
     // قائمة المستخدمين + الملفات المربوطة بيهم (صور كمثال)
     const userFiles = {
-      "hazem": "hazem.jpg",
+      "najwa": "najwa.jpg",
       "ahmed": "ahmed.jpg",
       "sara": "sara.png"
     };
@@ -77,3 +77,4 @@
   </script>
 </body>
 </html>
+
