--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     // قائمة المستخدمين + الملفات المربوطة بيهم (صور كمثال)
     const userFiles = {
       "najwa": "najwa.jpg",
-      "ahmed": "ahmed.jpg",
+      "ahmed": "ahmed.pdf",
       "sara": "sara.png"
     };
 
@@ -77,4 +77,5 @@
   </script>
 </body>
 </html>
+
 
