--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <script>
     // قائمة المستخدمين + الملفات المربوطة بيهم (صور كمثال)
     const userFiles = {
-      "najwa": "najwa.jpg",
+      "najwa": "najva.jpg",
       "ahmed": "ahmed.pdf",
       "sara": "sara.png"
     };
@@ -77,5 +77,6 @@
   </script>
 </body>
 </html>
+
 
 
