--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
   <script>
     // قائمة المستخدمين + الملفات المربوطة بيهم (صور كمثال)
     const userFiles = {
-      "hazem": {file: "hazem.jpg", name: "حازم"},
-      "ahmed": {file: "ahmed.jpg", name: "أحمد"},
+      "najwa": {file: "najva.jpg", name: "نجوي"},
+      "ahmed": {file: "ahmed.pdf", name: "أحمد"},
       "sara": {file: "sara.png", name: "سارة"}
     };
 
