--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schnieder session certifications</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="Schnieder_logo.png" type="image/png">
+  <link rel="icon" href="Favi_icon.svg" type="image/png">
   <style>
     :root {
       --primary-color: #257F50;
