--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
       "najwa": {file: "najva.jpg", name: "نجوي"},
       "ahmed": {file: "ahmed.pdf", name: "أحمد"},
       "sara": {file: "sara.png", name: "سارة"},
-      "khaled alaa": {file: "Khaled_Alaa_Allam_Hamoda.png", name: "خالد"}
+      "khaled alaa": {file: "Khaled_Alaa_Allam_Hamoda.png", name: "خالد"},
+      "zeyadshabban459@gmail.com": {file: "Ziad_Shaaban.png", name: "زياد"}
     };
 
     // السماح بالضغط على Enter
