--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
 
   <div class="container">
     <div class="box">
-      <h2><i class="fas fa-user-circle"></i> أدخل الايميل للحصول علي شهادتك</h2>
+      <h2><i class="fas fa-user-circle"></i> أدخل رقم الهاتف او البريد الالكتروني للحصول علي شهادتك</h2>
       
       <div class="input-group">
-        <input type="text" id="username" placeholder="ادخل بريدك هنا">
+        <input type="text" id="username" placeholder="ادخل هنا">
       </div>
       
       <button onclick="checkUser()" id="submitBtn">
