--- a/index.html
+++ b/index.html
@@ -1235,11 +1235,11 @@
   "201006234597": {file: "Ahmed_Mohamed_Khalil.png", name: "Ahmed"},
   "+201006234597": {file: "Ahmed_Mohamed_Khalil.png", name: "Ahmed"},
   "ahmed105200400@gmail.com": {file: "Ahmed_Mohamed_Khalil.png", name: "Ahmed"},
-  "1069278802": {file: "Istam_Ahmed_Ali.png", name: "Istam"},
-  "01069278802": {file: "Istam_Ahmed_Ali.png", name: "Istam"},
-  "201069278802": {file: "Istam_Ahmed_Ali.png", name: "Istam"},
-  "+201069278802": {file: "Istam_Ahmed_Ali.png", name: "Istam"},
-  "eslam.ahmed.itec.ag4@gmail.com": {file: "Istam_Ahmed_Ali.png", name: "Istam"},
+  "1069278802": {file: "Istam_Ahmed_Ali.png", name: "Islam"},
+  "01069278802": {file: "Istam_Ahmed_Ali.png", name: "Islam"},
+  "201069278802": {file: "Istam_Ahmed_Ali.png", name: "Islam"},
+  "+201069278802": {file: "Istam_Ahmed_Ali.png", name: "Islam"},
+  "eslam.ahmed.itec.ag4@gmail.com": {file: "Istam_Ahmed_Ali.png", name: "Islam"},
   "1024229815": {file: "Fatma_Mahmoud.png", name: "Fatma"},
   "01024229815": {file: "Fatma_Mahmoud.png", name: "Fatma"},
   "201024229815": {file: "Fatma_Mahmoud.png", name: "Fatma"},
